# botparty-client

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
botparty_robot/: __init__.py  __main__.py  audio.py  camera.py  client.py  client_commands.py  client_livekit.py  client_media.py  client_ops.py  client_runtime.py  client_state.py  config.py  gateway.py  publisher.py  whip.py  ws_protocol.py
botparty_robot/handlers/: __init__.py
botparty_robot/hardware/: __init__.py  adafruit_pwm.py  base.py  common.py  compat.py  cozmo.py  custom.py  gopigo2.py  gopigo3.py  gpio.py  hardware_custom_example.py  l298n.py  maestro_servo.py  max7219.py  mc33926.py  mdd10.py  megapi_board.py  motor_hat.py  motozero.py  mqtt_pub.py  navq.py  none.py  owi_arm.py  pololu.py  serial_board.py  telly.py  thunderborg.py  vector.py
botparty_robot/tts/: __init__.py  base.py  common.py  cozmo_tts.py  custom.py  espeak.py  espeak_loop.py  festival.py  google_cloud.py  none.py  pico.py  polly.py  vector_tts.py
botparty_robot/video/: __init__.py  base.py  botparty_streamer.py  cozmo_vid.py  ffmpeg.py  ffmpeg_arecord.py  ffmpeg_arecord_whip.py  ffmpeg_hud.py  ffmpeg_libcamera.py  ffmpeg_process.py  ffmpeg_whip.py  gstreamer.py  gstreamer_arecord.py  none.py  opencv.py  vector_vid.py
docs/: client-mixins.md  configuration.md  index.md  installation.md  multi-camera.md  troubleshooting.md
docs/hardware/: adafruit-pwm.md  custom.md  index.md  l298n.md  motor-hat.md  mqtt.md  other.md  serial-board.md
docs/tts/: engines.md  espeak.md  festival.md  google-cloud.md  index.md  pico.md  polly.md
docs/video/: ffmpeg.md  gstreamer.md  index.md  libcamera.md  opencv.md
scripts/: install-botparty-client.sh  install-botparty-streamer.sh  install-gstreamer-publisher.sh  start-botparty-robot.sh
tests/: test_client_camera_factory.py  test_client_health.py  test_client_ops_update.py  test_config_and_commands.py  test_gateway.py  test_hardware_common.py
